@@ -1,4 +1,5 @@
 #!/bin/sh
+LANG=en_US
 
 if [ "$1" = "--full" ]; then FULL_TEST=1; shift; fi
 
@@ -116,8 +117,8 @@ TEST_EXPECTED="(stdin) 1 E8B7BE43 5c334qy BTAXLOOA6G3KQMODTHRGS5ZGME hvfkN/qlp/z
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test special characters:    "
-TEST_RESULT=$( echo | $rhash -p '\63\1\277\x0\x1\t\\ \x34\r' - )
-TEST_EXPECTED=$( printf '\63\1\277\\x0\1\t\\ 4\r' )
+TEST_RESULT=$( echo | $rhash -p '\63\1\277\x0f\x1\t\\ \x34\r' - )
+TEST_EXPECTED=$( printf '\63\1\277\x0f\1\t\\ 4\r' )
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test eDonkey link:          "
