@@ -1,3 +1,9 @@
+Mon Sep  4 2017 Aleksey
+	* Bugfix: broken binary hash output
+
+Mon Aug 28 2017 Aleksey
+	* Bugfix: fix running on WinXP
+
 Mon Aug 14 2017 Aleksey
 	* === Version 1.3.5 ===
 	* look for locales directory at PROGRAM_DIRECTORY\locale on Windows
